// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component should be large, red, disabled and multioption 1`] = `
<DocumentFragment>
  <div
    class="select is-large is-danger is-multiple"
  >
    <select
      aria-readonly="false"
      disabled=""
      multiple=""
      name=""
    >
      <option>
        1
      </option>
      <option>
        2
      </option>
      <option>
        3
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`Select component should concat classname in props with Bulma classname 1`] = `
<DocumentFragment>
  <div
    class="select other-class this-is-a-test"
  >
    <select
      aria-readonly="false"
      name=""
    >
      <option>
        1
      </option>
      <option>
        2
      </option>
      <option>
        3
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`Select component should have select classname 1`] = `
<DocumentFragment>
  <div
    class="select"
  >
    <select
      aria-readonly="false"
      name=""
    >
      <option>
        1
      </option>
      <option>
        2
      </option>
      <option>
        3
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`Select component should use inline styles 1`] = `
<DocumentFragment>
  <div
    class="select"
    style="width: 100%;"
  >
    <select
      aria-readonly="false"
      name=""
    >
      <option>
        1
      </option>
      <option>
        2
      </option>
      <option>
        3
      </option>
    </select>
  </div>
</DocumentFragment>
`;
